# ALC

./: OLA.m  README.md  adaptiveLoudnessComp.m  pyproject.toml  shelf1low.m
MATLAB/: OLA.m  adaptiveLoudnessComp.m  ellc.m  shelf1low.m  traceLoudness.m
src/alc/: __init__.py  __main__.py  cli.py  core.py  io.py
src/alc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
